--- a/AirMall/Html/Cart.html
+++ b/AirMall/Html/Cart.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css" media="all">
     <script type="text/javascript" src="js/dispatch.js" ></script>
+    <script type="text/javascript" src="js/jquery-3.3.1.min.js" ></script>
 </head>
 
 <body>
@@ -12,7 +13,6 @@
 	<div id='buttons'></div>
 	<div id='log'></div>
     <script type="text/javascript">
-        alert(12);
         window.onerror = function (err) {
             log('window.onerror: ' + err)
         }
