--- a/AirMall/Html/Pages/ReceivingOrderList.html
+++ b/AirMall/Html/Pages/ReceivingOrderList.html
@@ -13,7 +13,7 @@
     <script src="../Scripts/dispatch.js"></script>
     <script src="../Component/Bootstrap/js/bootstrap.min.js"></script>
     <script src="../Component/art-template/arttemplate.js"></script>
-    <script src="../Scripts/common.js?v=103"></script>
+    <script src="../Scripts/common.js?v=104"></script>
     <style>
         .barcode-block {
             float: right;
@@ -103,22 +103,6 @@
                 </div>
             </div>
             <ul class="list-group" id="order-list-item">
-                <!--<li class="list-group-item clearfix">
-                    <div class="tag">已完成</div>
-                    <ul class="info-list">
-                        <li class="col-30"><label class="lb-60">收货单号</label><span>No201873183</span></li>
-                        <li class="col-30"><label class="lb-35">站点</label><span>南苑机场</span></li>
-                        <li class="col-20"><label class="lb-60">申请人</label><span>李四</span></li>
-                        <li class="col-20"><label class="lb-60">应收总数</label><span>2130</span></li>
-                        <li class="col-30"><label class="lb-60">机号</label><span>A380</span></li>
-                        <li class="col-30"><label class="lb-35">路线</label><span>北京南苑</span><i class="iconfont icon-hline"></i><span>上海虹桥</span></li>
-                        <li class="col-20"><label class="lb-60">申请时间</label><span>2018.3.05</span></li>
-                        <li class="col-20"><label class="lb-60">实收总数</label><span>2130</span></li>
-                        <li class="col-60"><label class="lb-60">类型</label><span>配送</span></li>
-                        <li class="col-40"><label class="lb-60">配货时间</label><span>2018.3.05</span></li>
-                        <li class="col-100"><label class="lb-60">备注</label><span>无</span></li>
-                    </ul>
-                </li>-->
             </ul>
         </div>
     </div>
@@ -150,7 +134,7 @@
             <div class="tag success">已收货</div>
             {{/if}}
             <ul class="info-list">
-                <li class="col-60 ><label class="lb-60">收货单号</label><span>{{orderItem.DeliveryNo}}</span></li>
+                <li class="col-60" ><label class="lb-60">收货单号</label><span>{{orderItem.DeliveryNo}}</span></li>
                 <li class="col-30"><label class="lb-35">站点</label><span>{{orderItem.LineCHN.split("-")[0]}}</span></li>
                 <li class="col-30"><label class="lb-60">申请人</label><span>{{orderItem.ApplicantEmpName}}</span></li>
                 <li class="col-30"><label class="lb-60">应收总数</label><span>{{orderItem.NeedCounts}}</span></li>
